// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Battery component API should hide label 1`] = `
<Fragment>
  <i
    aria-label="high high"
    className="ins-battery ins-battery-high"
    widget-id="high"
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <HighBattery />
    </svg>
  </i>
</Fragment>
`;

exports[`Battery component CriticalBattery 1`] = `
<path
  d="M 99.168858,143.38516 H 351.33914 c 5.33437,0 9.69886,-5.04 9.69886,-11.2 v -28 c 0,-6.16 -4.36449,-11.2 -9.69886,-11.2 H 99.168857 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.2 9.698858,11.2 z M 99.168857,235.25069 H 351.33914 c 5.33437,0 9.69886,-5.04 9.69886,-11.2 v -28 c 0,-6.16 -4.36449,-11.2 -9.69886,-11.2 H 99.168857 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.2 9.698857,11.2 z M 99.168857,327.14542 H 351.33914 c 5.33437,0 9.69886,-5.04 9.69886,-11.19999 v -28 c 0,-6.16001 -4.36449,-11.2 -9.69886,-11.2 H 99.168857 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.19999 9.698857,11.19999 z M 99.168993,419.0375 H 351.33927 c 5.33437,0 9.69886,-5.04 9.69886,-11.2 v -28 c 0,-6.16 -4.36449,-11.2 -9.69886,-11.2 H 99.168993 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.2 9.698857,11.2 z"
/>
`;

exports[`Battery component HighBattery 1`] = `
<path
  d="M 99.168857,235.25069 H 351.33914 c 5.33437,0 9.69886,-5.04 9.69886,-11.2 v -28 c 0,-6.16 -4.36449,-11.2 -9.69886,-11.2 H 99.168857 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.2 9.698857,11.2 z M 99.168857,327.14542 H 351.33914 c 5.33437,0 9.69886,-5.04 9.69886,-11.19999 v -28 c 0,-6.16001 -4.36449,-11.2 -9.69886,-11.2 H 99.168857 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.19999 9.698857,11.19999 z M 99.168993,419.0375 H 351.33927 c 5.33437,0 9.69886,-5.04 9.69886,-11.2 v -28 c 0,-6.16 -4.36449,-11.2 -9.69886,-11.2 H 99.168993 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.2 9.698857,11.2 z"
/>
`;

exports[`Battery component LowBattery 1`] = `
<path
  d="M 99.168993,419.0375 H 351.33927 c 5.33437,0 9.69886,-5.04 9.69886,-11.2 v -28 c 0,-6.16 -4.36449,-11.2 -9.69886,-11.2 H 99.168993 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.2 9.698857,11.2 z"
/>
`;

exports[`Battery component MediumBattery 1`] = `
<path
  d="M 99.168857,327.14542 H 351.33914 c 5.33437,0 9.69886,-5.04 9.69886,-11.19999 v -28 c 0,-6.16001 -4.36449,-11.2 -9.69886,-11.2 H 99.168857 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.19999 9.698857,11.19999 z M 99.168993,419.0375 H 351.33927 c 5.33437,0 9.69886,-5.04 9.69886,-11.2 v -28 c 0,-6.16 -4.36449,-11.2 -9.69886,-11.2 H 99.168993 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.2 9.698857,11.2 z"
/>
`;

exports[`Battery component NullBattery 1`] = `
<path
  d="M 99.168858,143.38516 H 351.33914 c 5.33437,0 9.69886,-5.04 9.69886,-11.2 v -28 c 0,-6.16 -4.36449,-11.2 -9.69886,-11.2 H 99.168857 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.2 9.698858,11.2 z M 99.168857,235.25069 H 351.33914 c 5.33437,0 9.69886,-5.04 9.69886,-11.2 v -28 c 0,-6.16 -4.36449,-11.2 -9.69886,-11.2 H 99.168857 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.2 9.698857,11.2 z M 99.168857,327.14542 H 351.33914 c 5.33437,0 9.69886,-5.04 9.69886,-11.19999 v -28 c 0,-6.16001 -4.36449,-11.2 -9.69886,-11.2 H 99.168857 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.19999 9.698857,11.19999 z M 99.168993,419.0375 H 351.33927 c 5.33437,0 9.69886,-5.04 9.69886,-11.2 v -28 c 0,-6.16 -4.36449,-11.2 -9.69886,-11.2 H 99.168993 c -5.334371,0 -9.698857,5.04 -9.698857,11.2 v 28 c 0,6.16 4.364486,11.2 9.698857,11.2 z"
/>
`;

exports[`Battery component should render correctly CriticalBattery - 4 1`] = `
<Fragment>
  <i
    className="ins-battery ins-battery-4"
    widget-id="4"
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <CriticalBattery />
    </svg>
  </i>
  <span
    className="label"
  >
     
    4
     
  </span>
</Fragment>
`;

exports[`Battery component should render correctly CriticalBattery - critical 1`] = `
<Fragment>
  <i
    className="ins-battery ins-battery-critical"
    widget-id="critical"
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <CriticalBattery />
    </svg>
  </i>
  <span
    className="label"
  >
     
    critical
     
  </span>
</Fragment>
`;

exports[`Battery component should render correctly HighBattery - 3 1`] = `
<Fragment>
  <i
    className="ins-battery ins-battery-3"
    widget-id="3"
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <HighBattery />
    </svg>
  </i>
  <span
    className="label"
  >
     
    3
     
  </span>
</Fragment>
`;

exports[`Battery component should render correctly HighBattery - error 1`] = `
<Fragment>
  <i
    className="ins-battery ins-battery-error"
    widget-id="error"
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <HighBattery />
    </svg>
  </i>
  <span
    className="label"
  >
     
    error
     
  </span>
</Fragment>
`;

exports[`Battery component should render correctly HighBattery - high 1`] = `
<Fragment>
  <i
    className="ins-battery ins-battery-high"
    widget-id="high"
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <HighBattery />
    </svg>
  </i>
  <span
    className="label"
  >
     
    high
     
  </span>
</Fragment>
`;

exports[`Battery component should render correctly LowBattery - 1 1`] = `
<Fragment>
  <i
    className="ins-battery ins-battery-1"
    widget-id="1"
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <LowBattery />
    </svg>
  </i>
  <span
    className="label"
  >
     
    1
     
  </span>
</Fragment>
`;

exports[`Battery component should render correctly LowBattery - info 1`] = `
<Fragment>
  <i
    className="ins-battery ins-battery-info"
    widget-id="info"
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <LowBattery />
    </svg>
  </i>
  <span
    className="label"
  >
     
    info
     
  </span>
</Fragment>
`;

exports[`Battery component should render correctly LowBattery - low 1`] = `
<Fragment>
  <i
    className="ins-battery ins-battery-low"
    widget-id="low"
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <LowBattery />
    </svg>
  </i>
  <span
    className="label"
  >
     
    low
     
  </span>
</Fragment>
`;

exports[`Battery component should render correctly MediumBattery - 2 1`] = `
<Fragment>
  <i
    className="ins-battery ins-battery-2"
    widget-id="2"
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <MediumBattery />
    </svg>
  </i>
  <span
    className="label"
  >
     
    2
     
  </span>
</Fragment>
`;

exports[`Battery component should render correctly MediumBattery - medium 1`] = `
<Fragment>
  <i
    className="ins-battery ins-battery-medium"
    widget-id="medium"
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <MediumBattery />
    </svg>
  </i>
  <span
    className="label"
  >
     
    medium
     
  </span>
</Fragment>
`;

exports[`Battery component should render correctly MediumBattery - warn 1`] = `
<Fragment>
  <i
    className="ins-battery ins-battery-warn"
    widget-id="warn"
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <MediumBattery />
    </svg>
  </i>
  <span
    className="label"
  >
     
    warn
     
  </span>
</Fragment>
`;

exports[`Battery component should render correctly NullBatery, default 1`] = `
<Fragment>
  <i
    className="ins-battery ins-battery-"
    widget-id=""
    widget-type="InsightsBattery"
  >
    <svg
      id="battery_svg"
      shapeRendering="geometricpresision"
      style={
        Object {
          "enableBackground": "new 0 0 448 512",
        }
      }
      version="1.1"
      viewBox="0 0 448 512"
      x="0px"
      y="0px"
    >
      <path
        d="m 144.16452,21.032222 h 159.67454 q 123.1748,0 123.1748,128.667868 v 212.64759 q 0,128.66788 -123.1748,128.66788 H 144.16452 q -123.174811,0 -123.174811,-128.66788 V 149.70009 q 0,-128.667868 123.174811,-128.667868 z"
        style={
          Object {
            "fill": "none",
            "fillOpacity": 1,
            "stroke": "#969696",
            "strokeDasharray": "none",
            "strokeDashoffset": 0,
            "strokeLinejoin": "round",
            "strokeMiterlimit": 4,
            "strokeOpacity": 1,
            "strokeWidth": 41.96378708,
          }
        }
      />
      <NullBattery />
    </svg>
  </i>
  <span
    className="label"
  >
     
     
  </span>
</Fragment>
`;
